--- a/README
+++ b/README
@@ -18,6 +18,7 @@ Dependencies
 Web Core Framework project requires Java 7 compatible runtime and
 depends on the following external libraries:
 
+* Java(TM) EE 7 Web Specification APIs
 * EclipseLink
 * Agapsys Java Logging Framework
 * Agapsys SMTP Sender
